# doc-assistant

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  KICKOFF.md  README.md  docker-compose.yml  original-requirements.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: adr-writer.md  architect.md  figma-validator.md  jira-agentic-ticket-generator.md  jira-analyzer.md  payment-specialist.md  performance-reviewer.md  query-specialist.md  rtl-guardian.md  security-reviewer.md  senior-fe.md  simplicity-reviewer.md  standards-reviewer.md  tester.md
.claude/commands/: review-code.md
.claude/skills/: ai-ui-patterns  bundle-splitting  client-side-rendering  command-pattern  compound-pattern  compression  dynamic-import  factory-pattern  flyweight-pattern  hoc-pattern  hooks-pattern  import-on-interaction  import-on-visibility  islands-architecture  js-performance-patterns  loading-sequence  mediator-pattern  mixin-pattern  module-pattern  observer-pattern  prefetch  preload  presentational-container-pattern  prototype-pattern  provider-pattern  proxy-pattern  prpl  react-2026  react-composition-2026  react-data-fetching  react-render-optimization  render-props-pattern  route-based  singleton-pattern  static-import  third-party  tree-shaking  virtual-lists  vite-bundle-optimization
.github/workflows/: ci.yml
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
docker/: entrypoint.sh
docs/adr/: 0001-bespoke-rag-pipeline.md  0002-fastapi-backend-choice.md  0003-chromadb-as-vector-store.md  0004-pdf-docx-parser-choices.md  0005-swappable-llm-embedding-providers.md  0006-sse-streaming-approach.md  README.md
docs/explanation/: architecture.md  sequence-diagrams.md
docs/how-to/: quickstart.md  sample-queries.md
frontend/: .gitignore  .prettierignore  Dockerfile.dev  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx
frontend/tests/: setup.ts
specs/001-doc-assistant-rag/: data-model.md  plan.md  spec.md  (+3 more)
src/: config.py  main.py
tests/: conftest.py
(+108 files in other folders)
