[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "doc-assistant"
version = "0.1.0"
description = "RAG-powered document Q&A"

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
pydantic = {version = "^2.0"}
pydantic-settings = "*"
python-multipart = "*"
pymupdf = "*"
python-docx = "*"
chromadb = "*"
sentence-transformers = "*"
openai = "*"
anthropic = "*"
tenacity = "*"
structlog = "*"
prometheus-client = "*"
tiktoken = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-asyncio = "*"
httpx = "*"
respx = "*"
pytest-cov = "*"
ruff = "*"
mypy = "*"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = 3.11
strict = true
exclude = "tests/"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
