[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-assistant"
version = "0.1.0"
description = "RAG-powered document Q&A"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2",
    "pydantic-settings",
    "python-multipart",
    "pymupdf",
    "python-docx",
    "chromadb",
    "sentence-transformers",
    "openai",
    "anthropic",
    "tenacity",
    "structlog",
    "prometheus-client",
    "tiktoken",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "respx",
    "pytest-cov",
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = "tests/"
mypy_path = "."
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["chromadb.*", "sentence_transformers.*", "tiktoken.*", "fitz", "fitz.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
